src/components/HeroSection.css
video {
    object-fit: cover;
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: -1;
}

.hero-container {
    background: white;
    height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: inset 0 0 0 1000ppx rgba(0, 0, 0, 0.2);
    object-fit: contain;
    font-family: ccbiffbamboomoutline, sans-serif;
    font-weight: 400;
    font-style: normal;
}

.hero-container > h1 {
    color: black;
    font-size: 100px;
    margin-top: -100px;
}

.hero-container > p {
    margin-top: 8px;
    color: black;
    font-size: 32px;
}

ul#socials {
    list-style-type: none;
    }

.socials-item {
    display: inline-block;
    padding: 20px;
    width: 100px;
    height: 100px;
}

.socials-item > a {
    color: black;
}

@media screen and (max-width: 960px) {
    .hero-container > h1 {
       font-size: 70px;
        margin-top: -150px; 
    }
}

@media screen and (max-width: 768px) {
    .hero-container > h1 {
       font-size: 50px;
        margin-top: -100px; 
    }
    .hero-container > p {
        font-size: 30px;
    }
    .btn-mobile {
        display: block;
        text-decoration: none;
    }
}

